--- a/code.ipynb
+++ b/code.ipynb
@@ -257,7 +257,6 @@
         "    \"residential_status\",\n",
         "    \"sports_engagement\",\n",
         "    \"average_sleep\",\n",
-        "    \"stress_relief_activities\",\n",
         "    \"campus_discrimination\",\n",
         "]\n",
         "for col in clean_cats:\n",
@@ -1093,7 +1092,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv (3.13.9)",
+      "display_name": "venv",
       "language": "python",
       "name": "python3"
     },
@@ -1107,7 +1106,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.9"
+      "version": "3.14.0"
     }
   },
   "nbformat": 4,
